array indexing,slicing

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -5,8 +5,9 @@
    "id": "6ebbaf10-6873-4ca3-b46c-085c4b4642b9",
    "metadata": {},
    "source": [
-    "Fuction Details: Press shift + tab together to see functionality\n",
-    "Install: pip install numpy "
+    "Function Details: Press shift + tab together to see functionality\n",
+    "Install: pip install numpy \n",
+    "Comment Multiple Lines: Ctrl + /"
    ]
   },
   {
@@ -1020,9 +1021,840 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01d9d254-3ac9-465f-926f-f91ea2d23e49",
+   "metadata": {},
+   "source": [
+    "# random number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0bb7b0ea-95e8-4456-b29b-65e01ae3bcce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr1 = np.random.randint(1,10,size=4) #1D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f9b55dee-8a54-48f1-9b1e-978c5e69f0e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6, 2, 4, 6], dtype=int32)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "07cdcfb2-faf0-49c7-8200-f095125a943f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr2 = np.random.randint(1,10,size=(3,3)) #2D array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "aa831f51-14bc-4985-8376-4ea8d2264d0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8, 6, 5],\n",
+       "       [4, 5, 6],\n",
+       "       [6, 9, 5]], dtype=int32)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e578f5ec-3de5-49c6-aeb6-fe4e1b36f9f2",
+   "metadata": {},
+   "source": [
+    "# array indexing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26944c50-da03-4bca-9906-33ebba4ccfbb",
+   "metadata": {},
+   "source": [
+    "### 1D Array (Vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "04183108-f08a-4b02-adb2-db38cf5bd966",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr3 = np.array([1, 2, 3, 4, 6])\n",
+    "print(arr3[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "4eba8d7b-ab7b-46e8-a67c-016b4e4bf6d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr3[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a14016a-c945-4365-9e6c-bc9c895f02e9",
+   "metadata": {},
+   "source": [
+    "### 2D Array (Matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "e196c5f3-b6be-4663-924f-0adf5a44a847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr4=np.array([[1,2,3],[4,5,6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "47c6d37a-795f-409c-9c5e-ba9a88308529",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "2ba69428-ac9a-47de-8197-fe1ea5da86c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr4[1,2]) # [Row,Column]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "9e1e8bfb-09fe-4b8b-8a85-f7c74eac643b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr5=np.random.randint(1,48,size=(5,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "b513a68b-f0d6-47b1-b90b-c45879f45f61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4 33 10 24 34]\n",
+      " [ 8  6 46 16 36]\n",
+      " [ 6 20  8 32  7]\n",
+      " [ 9  6 18 28 13]\n",
+      " [10 10  8  4 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "c62f7fc0-70eb-4eaa-b8f1-dd90c123b639",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print 46 from the above\n",
+    "print(arr5[1,2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91f33746-8075-4c47-8a6b-3106a54918fd",
+   "metadata": {},
+   "source": [
+    "### 3D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "ba26d36b-5d77-40d4-9670-7b7c82253aa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr6=np.random.randint(1,47,size=(3,4,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e52eb1ef-b5b0-439d-a92e-05509d0c8427",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[41 19  7]\n",
+      "  [ 3 46 23]\n",
+      "  [ 3 32 15]\n",
+      "  [20 20 19]]\n",
+      "\n",
+      " [[13 31 16]\n",
+      "  [ 6 40 32]\n",
+      "  [46 19 12]\n",
+      "  [28 22 40]]\n",
+      "\n",
+      " [[16 46  8]\n",
+      "  [19 40 44]\n",
+      "  [17 39 11]\n",
+      "  [32 35 13]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "7e0169e1-1f4d-4ee4-b0f3-d66eb6a97043",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr6[2,2,1]) #[Set,Row,Column]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0991f929-cccb-4d15-99d6-4ec34dcefc4c",
+   "metadata": {},
+   "source": [
+    "# Array Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "1cd7661d-f7b4-4bb8-8da7-86e22eff8d54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Slicing in Python (and NumPy) includes the start index but excludes the end index "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42c2f5b6-fe98-4145-bda3-fcf80c368e88",
+   "metadata": {},
+   "source": [
+    "### 1D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "1874520a-7ed5-458a-a979-a8fa3481f48f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 6])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "76c89ad9-6531-4bd5-ab7d-11674d1a13fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr3[1:3] #print 2,3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "a214be3d-0632-4722-9788-b62d0fff3ab6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 6])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr3[1:] #print 2,3,4,6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ad4c84b-fe26-4eed-a08f-2bfa2541ceb3",
+   "metadata": {},
+   "source": [
+    "### 2D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "0079e324-9c6a-400e-8769-e0c9c523e23f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr6=np.random.randint(5,10,size=(3,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "45af8023-1d71-44f2-99d2-fff799b474f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 8 6]\n",
+      " [6 8 5]\n",
+      " [9 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "d0237883-70d0-419e-8695-84fd13159638",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 8 6]\n",
+      " [6 8 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr6[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "0c3d6fd2-5b55-4576-9f05-8e7fc77c6a28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 8]\n",
+      " [6 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr6 [0:2,0:2]) #first two row and column\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "6490dfbc-6ecc-4587-87c1-9548d3411c03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6 8 5]\n",
+      " [9 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr6 [1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "34e61cd9-e2ba-48d4-9d89-e8f2eed74026",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8 5]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr6 [1:,1:])"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c59cd48e-0834-4529-b6c1-336a447d7be0",
+   "metadata": {},
+   "source": [
+    "#Problem Solving\n",
+    "Given the following 2D NumPy array:\n",
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([\n",
+    "    [10, 20, 30, 40],\n",
+    "    [50, 60, 70, 80],\n",
+    "    [90, 100, 110, 120],\n",
+    "    [130, 140, 150, 160]\n",
+    "])\n",
+    "\n",
+    "1. Extract the submatrix:\n",
+    "[\n",
+    "[60, 70],\n",
+    "[100, 110]\n",
+    "]\n",
+    "\n",
+    "2. Replace the extracted submatrix with zeros in the original array.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "dde063db-2fae-4ff7-ab9d-1b52ca9d6476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([\n",
+    "    [10, 20, 30, 40],\n",
+    "    [50, 60, 70, 80],\n",
+    "    [90, 100, 110, 120],\n",
+    "    [130, 140, 150, 160]\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "3a7bc316-a8ff-4a65-a6fd-2a806ef81e74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 10,  20,  30,  40],\n",
+       "       [ 50,  60,  70,  80],\n",
+       "       [ 90, 100, 110, 120],\n",
+       "       [130, 140, 150, 160]])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "e078ae74-de6b-4903-8269-b9c67afcafd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 50,  60,  70,  80],\n",
+       "       [ 90, 100, 110, 120]])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "ef5db1fa-f70b-4509-b150-05c4584f225c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 60,  70],\n",
+       "       [100, 110]])"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[1:3,1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "86a64b36-a02c-448b-b12b-ffac679b3abc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr[1:3,1:3]=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "70fcdb8b-a37c-426a-9f37-6af185092d80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 10,  20,  30,  40],\n",
+       "       [ 50,   0,   0,  80],\n",
+       "       [ 90,   0,   0, 120],\n",
+       "       [130, 140, 150, 160]])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41cf4958-7ba6-43df-a098-3e8bb01e7973",
+   "metadata": {},
+   "source": [
+    "# reshape"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "a6e48c08-3dce-47a5-a9a1-964a8ef9df5b",
+   "metadata": {},
+   "source": [
+    "array reshaping primarily refers to changing the dimensions of a NumPy array without altering its underlying data. This is achieved using numpy.reshape() function or the reshape() method of a NumPy array.\n",
+    "\n",
+    "The total number of elements in the new shape must be equal to the total number of elements in the original array. If not, a ValueError will be raised."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "f0602165-b771-4d2c-a2b8-6ee75158635e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array=np.random.randint(5,20,size=(2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "426aab90-ee09-4a8c-b9de-5f89121ef9d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13  9  7]\n",
+      " [19 19 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "c7b59b89-4421-4bb6-9797-1714c88e09f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13  9]\n",
+      " [ 7 19]\n",
+      " [19 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#method 1\n",
+    "print(np.reshape(array,(3,2))) #np.reshape(name of the array, (new shape (row,column))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "9763b357-4872-4502-9589-2beb9de73c26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13  9]\n",
+      " [ 7 19]\n",
+      " [19 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#method 2 \n",
+    "print(array.reshape(3,2)) #arrayname.reshape((new shape (row,column))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e4343a2-21fe-42c9-a4ba-cff0338cdb35",
+   "metadata": {},
+   "source": [
+    "# resize "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "d5040248-c14e-4c99-97d8-54da94fc9cdb",
+   "metadata": {},
+   "source": [
+    "np.resize(a, new_shape)\n",
+    "Suppose the new array is larger than the original array. In that case, the new array is filled with repeated copies of a.\n",
+    "\n",
+    "\n",
+    "a.resize(new_shape)\n",
+    "Note that this behavior is different from a.resize(new_shape), which fills with zeros instead of repeated copies of a."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "92a1b7a3-d208-4e9f-bb74-87a9bc57d1ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array1= np.random.randint(1,15,size=(3,3))\n",
+    "array2= np.random.randint(1,15,size=(5,3))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "1bafadb9-701c-44ad-9cb4-9a0302d3a48e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13  6  2]\n",
+      " [ 8  1  7]\n",
+      " [ 9  8 13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "edbbe14f-6bd0-479f-9534-80947d8f0867",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13  6  2]\n",
+      " [ 8  1  7]\n",
+      " [ 9  8 13]\n",
+      " [13  6  2]\n",
+      " [ 8  1  7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.resize(array1,(5,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "e70f91a7-3d39-4980-9510-f7e3a5381a6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array2.resize(4,3))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73dd4c7e-7795-4cd5-81ad-e0302d7b44e0",
+   "id": "6c23d847-a8d0-4371-9fac-77edac588f38",
    "metadata": {},
    "outputs": [],
    "source": []
