--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -737,6 +737,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df18c0b7-54c6-458e-ac83-e185215b9542",
+   "metadata": {},
+   "source": [
+    "# full Like"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "48fb9a92-c710-49ea-a41f-6d46835d97c1",
+   "metadata": {},
+   "source": [
+    "\n",
+    "b= array([[2, 3, 4],\n",
+    "         [4, 5, 6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "534b7290-51dd-40d5-8b76-2ef516912f9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 6, 6],\n",
+       "       [6, 6, 6]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.full_like(b,6) #same shape as an arrray we already used"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "274722b7-493f-4e6e-91f8-65c088b5ad4a",
    "metadata": {},
    "source": [
@@ -1095,6 +1135,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a00721c5-df52-4e23-901f-07760296777c",
+   "metadata": {},
+   "source": [
+    "### int"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "id": "0bb7b0ea-95e8-4456-b29b-65e01ae3bcce",
@@ -1156,6 +1204,99 @@
    ],
    "source": [
     "arr2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61c8f8f3-a8a4-4b03-b94b-769457704aa6",
+   "metadata": {},
+   "source": [
+    "### float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "355ac203-8177-487f-8f8d-1c3e14d2d379",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr3=np.random.rand(3,2,3) #3D,Row,Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "5845b1c5-9d5e-4648-a79e-bb4c22e55966",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.36055349, 0.22081485, 0.96501966],\n",
+       "        [0.80728647, 0.35531594, 0.91102114]],\n",
+       "\n",
+       "       [[0.35542366, 0.09000784, 0.52656133],\n",
+       "        [0.1887764 , 0.77391807, 0.26270931]],\n",
+       "\n",
+       "       [[0.46429948, 0.27868352, 0.34405141],\n",
+       "        [0.03815765, 0.83347104, 0.31374053]]])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd9e8ba0-7875-4cd0-9566-a6ce019e05fc",
+   "metadata": {},
+   "source": [
+    "### random sample"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "584e2366-e3cf-4f5f-a4f2-660641bc0738",
+   "metadata": {},
+   "source": [
+    "arr1 = np.random.randint(1,10,size=4) #1D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "e19fdce4-b978-4304-bcaf-a949f36eef3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rans=np.random.random_sample(arr1.shape) #will be using same shape as arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "63e9a7b3-8515-4800-9a9d-ecef992926aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.43343989, 0.89718799, 0.19464572, 0.50617903])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rans"
    ]
   },
   {
@@ -1639,6 +1780,252 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31848342-1e78-4339-9334-81cecfc6aed9",
+   "metadata": {},
+   "source": [
+    "# Copy {arrayname.copy()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "200e2a86-f2a7-4646-8589-653c0542905c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_a =np.array([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "9b4c6ff0-5c86-433b-99e5-2ed8496df307",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "fbabac93-0175-488c-a48b-9bb9175b12e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_b=arr_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "415597c1-d0d0-47f2-9e0b-000007118272",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "4a3387e0-ca43-419e-8799-6e8eab5a97da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_b= arr_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "fc423248-af0d-4a66-b728-ac78236ae3bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_b[0]=100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "40e6874c-3e89-443c-aeff-a3193033c590",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100,   2,   3])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "fa124c96-130e-401d-acb8-d04ccbab9d6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100,   2,   3])"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_a #value of a is also changed. That is why we should use copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "638311c7-f331-486a-9dc0-0692026ae7ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_c=np.array([4,5,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "baa0025d-ea73-4127-867c-0564e9e79134",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6])"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "533b4cd4-dafa-45a0-9d67-d1a59e12c47c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_d=arr_c.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "397a36ea-64fd-471e-ba71-f529529b2be7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6])"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_d "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "3c7150e2-0fc9-4282-94ec-794f33167d7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_d[0]=10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "6e5c6018-ae69-4d78-8b4b-a18e76f36140",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10,  5,  6])"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "b9408569-d1f7-41f8-a2e6-a781476f6701",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6])"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0991f929-cccb-4d15-99d6-4ec34dcefc4c",
    "metadata": {},
    "source": [
@@ -1653,14 +2040,6 @@
    "outputs": [],
    "source": [
     "# Slicing in Python (and NumPy) includes the start index but excludes the end index "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "42c2f5b6-fe98-4145-bda3-fcf80c368e88",
-   "metadata": {},
-   "source": [
-    "### 1D Array"
    ]
   },
   {
@@ -1996,7 +2375,11 @@
   {
    "cell_type": "raw",
    "id": "de613ef4-bee7-4b8f-b13e-39256451aa4f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "numpy.ravel() is a function in the NumPy library that flattens a multi-dimensional array into a one-dimensional array. I"
    ]
@@ -2197,7 +2580,7 @@
    "id": "d3b7cea4-334a-4ed5-9805-1f68f35365dd",
    "metadata": {},
    "source": [
-    "Does not effect the valu of the original array"
+    "Does not effect the value of the original array"
    ]
   },
   {
@@ -2236,6 +2619,146 @@
    "metadata": {},
    "source": [
     "The changes also reflect on the original array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34e6687f-f72c-45f2-a6da-e65b9d784a79",
+   "metadata": {},
+   "source": [
+    "# repeat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "a9f4ce7c-a512-4e47-8ba5-e5f55d57b4a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rep=np.array([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "0dc4d949-8cf6-43e6-b277-fa1d9ffd5b99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 2, 2, 2, 3, 3, 3])"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.repeat(rep,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "45e78b98-4e65-414a-8f13-d21b168e4e0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 2, 2, 2, 3, 3, 3])"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.repeat(rep,3,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "2d63961d-4a5a-4a0e-af53-b5aefdd3d032",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rep2=np.array([[1,2,3],[4,5,6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "46bb88e7-a8b1-49a7-99b3-3110ea85c72a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rep2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "825175a4-dc4e-4a48-b49b-8b70af9c0db3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [1, 2, 3],\n",
+       "       [1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [4, 5, 6],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.repeat(rep2,3,axis=0) #rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "08f7afe6-e51b-4b16-9656-9743e48c9d3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 2, 2, 2, 3, 3, 3],\n",
+       "       [4, 4, 4, 5, 5, 5, 6, 6, 6]])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.repeat(rep2,3,axis=1) #columns"
    ]
   },
   {
