--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "e3c3c85d-fd52-4484-b515-99a583ed9790",
+   "metadata": {},
+   "source": [
+    "Numpy only accepts array as a list"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "95b1ae60-cb62-49ce-852e-25413f742af3",
    "metadata": {},
@@ -20,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "9b17512d-7d2d-4ed9-a189-a65e1159e331",
    "metadata": {},
    "outputs": [],
@@ -427,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "5c860406-b884-477c-9664-973c9f30b38d",
    "metadata": {},
    "outputs": [],
@@ -446,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "91bab85d-6e0a-41b8-93f9-5e47e6d2f1d5",
    "metadata": {},
    "outputs": [
@@ -456,7 +464,7 @@
        "6"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,6 +597,100 @@
    ],
    "source": [
     "arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e96e9731-910c-420b-a88d-fac73ad38213",
+   "metadata": {},
+   "source": [
+    "# Array Sum"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "0b356125-223f-48fa-b0c8-d659f6164e3f",
+   "metadata": {},
+   "source": [
+    "Normal List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7d749d85-b634-45b6-b6ed-8f6da04be873",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[1,2,3]\n",
+    "list2=[4,5,6]\n",
+    "\n",
+    "print(list1+list2)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "84ce0dc3-be1b-4250-83e2-91b007dcb4de",
+   "metadata": {},
+   "source": [
+    "Numpy Array allows us to do mathematical operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e6e404c7-d2eb-45ca-ab17-a67d8b940dba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14 25 36]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1=np.array([10,20,30])\n",
+    "arr2=np.array([4,5,6])\n",
+    "print(arr1+arr2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "540afe97-1859-493b-8db1-8c396c1521dc",
+   "metadata": {},
+   "source": [
+    "array* 40%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "556243a5-d3fe-4839-8b72-ba6c4b33fb41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4.,  8., 12.])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1*0.4"
    ]
   },
   {
@@ -733,6 +835,44 @@
    ],
    "source": [
     "np.full ((2,3),5) # np.full((shape), element)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93a47db7-b458-4514-a981-81e734dca910",
+   "metadata": {},
+   "source": [
+    "### Value of your own"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ba712c5b-ba32-41ca-b3d9-37003e627ee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spurs=np.full((3,2),\"Spurs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8f90e1d7-a077-47bc-ac10-e7a32a4b02b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Spurs' 'Spurs']\n",
+      " ['Spurs' 'Spurs']\n",
+      " ['Spurs' 'Spurs']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(spurs)"
    ]
   },
   {
@@ -943,7 +1083,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arange=np.arange(2,20,4) #arrange(starting value,ending  vlaue, step size)"
+    "arange=np.arange(2,20,4) #arrange(starting value,ending  vlaue, step size(interval between them)) "
    ]
   },
   {
@@ -977,39 +1117,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "id": "70dab485-8def-4fc8-bf1d-b5920da542f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "linspace = np.linspace (1,100) #Linspace (start point, end point, number of values) "
+    "linspace = np.linspace (2,20,4) #Linspace (start point, end point, number of values) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "id": "eefe39c4-be78-41b3-998b-1efb48fc989f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  1.        ,   3.02040816,   5.04081633,   7.06122449,\n",
-       "         9.08163265,  11.10204082,  13.12244898,  15.14285714,\n",
-       "        17.16326531,  19.18367347,  21.20408163,  23.2244898 ,\n",
-       "        25.24489796,  27.26530612,  29.28571429,  31.30612245,\n",
-       "        33.32653061,  35.34693878,  37.36734694,  39.3877551 ,\n",
-       "        41.40816327,  43.42857143,  45.44897959,  47.46938776,\n",
-       "        49.48979592,  51.51020408,  53.53061224,  55.55102041,\n",
-       "        57.57142857,  59.59183673,  61.6122449 ,  63.63265306,\n",
-       "        65.65306122,  67.67346939,  69.69387755,  71.71428571,\n",
-       "        73.73469388,  75.75510204,  77.7755102 ,  79.79591837,\n",
-       "        81.81632653,  83.83673469,  85.85714286,  87.87755102,\n",
-       "        89.89795918,  91.91836735,  93.93877551,  95.95918367,\n",
-       "        97.97959184, 100.        ])"
+       "array([ 2.,  8., 14., 20.])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "id": "0bb7b0ea-95e8-4456-b29b-65e01ae3bcce",
    "metadata": {},
    "outputs": [],
@@ -1154,17 +1282,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "id": "f9b55dee-8a54-48f1-9b1e-978c5e69f0e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([5, 7, 6, 6], dtype=int32)"
+       "array([8, 1, 5, 3], dtype=int32)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,6 +1335,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "68e6a030-f699-453f-94bc-5b31682fd372",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr3 = np.random.randint(1,10,(3,3)) #range,size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0a8513c8-2f9a-40e8-acb7-c04b7237c39d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 7 1]\n",
+      " [8 2 3]\n",
+      " [2 1 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "61c8f8f3-a8a4-4b03-b94b-769457704aa6",
    "metadata": {},
@@ -1216,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 44,
    "id": "355ac203-8177-487f-8f8d-1c3e14d2d379",
    "metadata": {},
    "outputs": [],
@@ -1226,24 +1384,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 45,
    "id": "5845b1c5-9d5e-4648-a79e-bb4c22e55966",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.36055349, 0.22081485, 0.96501966],\n",
-       "        [0.80728647, 0.35531594, 0.91102114]],\n",
+       "array([[[0.27574381, 0.71707563, 0.08009198],\n",
+       "        [0.80583703, 0.64327732, 0.79050993]],\n",
        "\n",
-       "       [[0.35542366, 0.09000784, 0.52656133],\n",
-       "        [0.1887764 , 0.77391807, 0.26270931]],\n",
+       "       [[0.54314068, 0.52945921, 0.66912727],\n",
+       "        [0.95186379, 0.5805173 , 0.33741716]],\n",
        "\n",
-       "       [[0.46429948, 0.27868352, 0.34405141],\n",
-       "        [0.03815765, 0.83347104, 0.31374053]]])"
+       "       [[0.80725752, 0.88395224, 0.96618261],\n",
+       "        [0.29912595, 0.47539711, 0.09977979]]])"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1428,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 26,
+   "id": "3e7cd3aa-fadf-45fc-8c93-f268515891a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 20, 30])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "e19fdce4-b978-4304-bcaf-a949f36eef3c",
    "metadata": {},
    "outputs": [],
@@ -1280,17 +1459,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 28,
    "id": "63e9a7b3-8515-4800-9a9d-ecef992926aa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.43343989, 0.89718799, 0.19464572, 0.50617903])"
+       "array([0.13595644, 0.42732275, 0.71225396])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
